# prototypes

./: README.md  package.json
.claude/skills/speak/: SKILL.md  speak.sh
canonicaldoc/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
canonicaldoc/app/: auth.py  billing.py  config.py  db.py  emails.py  main.py  models.py  template.py
canonicaldoc/app/static/: style.css
canonicaldoc/app/templates/: base.html  check_email.html  doc.html  landing.html  login.html
canonicaldoc/docs/diary/: 2026-06-07-brand-landing.md  2026-06-07-canonicaldoc-mvp.md  2026-06-07-email-resend.md  2026-06-07-monochrome-rebrand.md  2026-06-07-stripe-billing.md
pi-elevenlabs-voice/: README.md  package-lock.json  package.json  tsconfig.json
pi-elevenlabs-voice/src/: config.ts  index.ts  prompt.ts  stt.ts  text.ts  tts.ts
