[project]
name = "canonicaldoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "python-multipart>=0.0.32",
    "resend>=2.30.1",
    "sqlmodel>=0.0.38",
    "stripe>=12.0.0",
]
